--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "d3-scale": "^3.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-simple-maps": "^1.0.0-beta.0"
   },
   "scripts": {
     "start": "react-scripts start",
