--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "react-simple-maps": "^1.0.0-beta.0"
+    "react-simple-maps": "^1.0.0-beta.0",
+    "rgb-hex": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
