--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "react-simple-maps": "^1.0.0-beta.0",
+    "react-tooltip": "^3.11.1",
     "rgb-hex": "^3.0.0"
   },
   "scripts": {
