--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "3.2.0",
     "react-simple-maps": "^1.0.0-beta.0",
     "react-tooltip": "^3.11.1",
+    "recharts": "^1.8.5",
     "rgb-hex": "^3.0.0"
   },
   "scripts": {
